Update email format in privacy policy
Removed mailto link from email address in privacy policy.

--- a/www/privacy-policy.html
+++ b/www/privacy-policy.html
@@ -42,7 +42,7 @@
 <p>📩 <strong>Questions or Feedback?</strong></p>
 <ul>
     <li>Fill out the <a href="https://forms.gle/gq4jtLB2qPin9vju8">Feedback Form</a></li>
-    <li>Or email: <a href="mailto:roniui.github.io+feedback@gmail.com">roniui.github.io+feedback@gmail.com</a></li>
+    <li>Or email: roniui.github.io+feedback@gmail.com</li>
 </ul>
 
 <p>Thanks for visiting!</p>
